# sbg-loc-manager

./: README.md
localization_manager/: CMakeLists.txt  package.xml
localization_manager/include/localization_manager/: sbg_localization_processor.h
localization_manager/src/: localization_solution_manager.cpp  sbg_localization_processor.cpp
sbg_localization_manager/: CMakeLists.txt  package.xml
sbg_localization_manager/include/localization_manager/: LLtoUTM.h  sbg_localization_processor.h
sbg_localization_manager/launch/: sbg_localization_processor.launch  sbg_localization_processor.launch.py
sbg_localization_manager/src/: sbg_localization_processor.cpp
