<?xml version="1.0"?>
<package format="2">
  <name>sbg_localization_manager</name>
  <version>0.0.0</version>
  <description>Process SBG solution output and manage failures</description>
  <maintainer email="saravecc@georgiatech-metz.fr">saravecc</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>sbg_driver</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2</depend>

  <export>
  </export>
</package>
